account-data/Reishi-Narisada/ap-southeast-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-5209be2b",
                    "NetworkAclId": "acl-97bc4af0",
                    "SubnetId": "subnet-3de1fb4b"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-5309be2a",
                    "NetworkAclId": "acl-97bc4af0",
                    "SubnetId": "subnet-842fd9e3"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0af68a72",
                    "NetworkAclId": "acl-97bc4af0",
                    "SubnetId": "subnet-953300d3"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-97bc4af0",
            "OwnerId": "416817624313",
            "Tags": [],
            "VpcId": "vpc-eb795b8f"
        }
    ]
}
